--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "05-cambio-service"]
 	path = 05-cambio-service
 	url = https://github.com/LucasGooes/05-cambio-service.git
+[submodule "06-book-service"]
+	path = 06-book-service
+	url = https://github.com/LucasGooes/06-book-service.git
